<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/lineWidth"
        android:icon="@drawable/ic_baseline_brush"
        android:title="@string/lineWidth"
        app:showAsAction="always"/>
    <item
        android:id="@+id/eraseid"
        android:icon="@drawable/ic_baseline_erase"
        android:title="@string/erase"
        app:showAsAction="always" />
    <item
        android:id="@+id/colorid"
        android:icon="@drawable/ic_baseline_palette"
        android:title="@string/Color"
        app:showAsAction="always" />
    <item
        android:id="@+id/undo"
        android:icon="@drawable/ic_baseline_undo"
        android:title="@string/Undo"
        app:showAsAction="always" />
    <item
        android:id="@+id/redo"
        android:icon="@drawable/ic_baseline_redo"
        android:title="@string/Redo"
        app:showAsAction="always" />
    <item
        android:id="@+id/colorize"
        android:icon="@drawable/ic_baseline_colorize"
        android:title="@string/colorize"
        app:showAsAction="always"/>
    <item
        android:id="@+id/saveid"
        android:title="@string/save" />

    <item
        android:id="@+id/clearid"
        android:title="@string/clear" />
</menu>