<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_linearView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal|center_vertical"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tv_main"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="200dp"
        android:text="@string/temp_art"
        android:textAppearance="@style/TextAppearance.AppCompat.Large" />

    <Button
        android:id="@+id/btn_mainArt"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:text="@string/new_art" />

    <Button
        android:id="@+id/btn_mainGallery"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/gallery" />

    <Button
        android:id="@+id/btn_editFromGallery"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/open_amp_edit"/>

</LinearLayout>
