<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="-102dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/about_heading"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="32dp"
                android:text="@string/contents"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/about_h1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:maxLines="20"
                android:singleLine="false"
                android:text="@string/about"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/about_h2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:maxLines="20"
                android:singleLine="false"
                android:text="@string/q_amp_a"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/about_aboutTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="52dp"
                android:gravity="center_horizontal"
                android:text="@string/about_tempart"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/about_body"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="10dp"
                android:maxLines="20"
                android:singleLine="false"
                android:text="@string/about_text"
                android:textAlignment="center"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/qa_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="52dp"
                android:gravity="center_horizontal"
                android:text="@string/Q_A"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/qa_q1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="10dp"
                android:maxLines="20"
                android:singleLine="false"
                android:text="@string/q1"
                android:textSize="15sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/qa_a1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:maxLines="20"
                android:singleLine="false"
                android:text="@string/a1"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/qa_q2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="10dp"
                android:maxLines="20"
                android:singleLine="false"
                android:text="@string/q2"
                android:textSize="15sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/qa_a2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:maxLines="20"
                android:singleLine="false"
                android:text="@string/a2"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/qa_q3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="10dp"
                android:maxLines="20"
                android:singleLine="false"
                android:text="@string/q3"
                android:textSize="15sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/qa_a3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="20dp"
                android:maxLines="20"
                android:singleLine="false"
                android:text="@string/a3"
                android:textSize="15sp" />
        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>